# open_ai

./: .gitignore  Cargo.toml  README.md
examples/assistant-stream/: Cargo.toml
examples/assistant-stream/src/: main.rs
examples/chat-completions/: Cargo.toml
examples/chat-completions-image/: Cargo.toml
examples/chat-completions-image/src/: main.rs
examples/chat-completions-stream/: Cargo.toml
examples/chat-completions-stream/src/: main.rs
examples/chat-completions/src/: main.rs
examples/completions_legacy/: Cargo.toml
examples/completions_legacy/src/: main.rs
src/: core.rs  error.rs  lib.rs  openai_error.rs  pagination.rs  resource.rs  shared.rs  streaming.rs
src/core/: core.rs  core.txt  mod.rs  request_options.rs  streaming.rs
src/resources/: completions.rs  mod.rs
src/resources/beta/: assistants.rs  mod.rs  shared.rs
src/resources/beta/threads/: messages.rs  mod.rs  threads.rs
src/resources/beta/threads/runs/: mod.rs  runs.rs  steps.rs
src/resources/chat/: chat.rs  completions.rs  mod.rs
