[package]
name = "openai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
lazy_static = "1.5.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
struct_iterable = "0.1.1"
