[package]
name = "crab_ai"
version = "0.1.9"
authors = ["André de Moraes <deco.moraes@icloud.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
description = "OpenAI library for Rust"
repository = "https://github.com/decomoraes/crab_ai"
keywords = ["openai", "api", "client", "rust", "ai"]
categories = ["api-bindings", "network-programming"]
homepage = "https://github.com/decomoraes/crab_ai"
documentation = "https://docs.rs/crab_ai"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4"] }
lazy_static = "1.5.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
struct_iterable = "0.1.1"
